[metadata]
name = portfoliolab
version = 0.0.0
author = Hudson and Thames Quantitative Research
author_email = research@hudsonthames.org
licence = All Rights Reserved
licence-file = LICENSE.txt
description = PortfolioLab is a python library that enables traders who want to take advantage of the latest portfolio optimisation algorithms, used by professionals in industry.
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://www.hudsonthames.org/
project_urls =
    Documentation = https://portfoliolab.readthedocs.io/en/latest/
    Bug Reports = ...
    Source = https://github.com/hudson-and-thames/portfoliolab
    Blog = https://hudsonthames.org/blog/
    Apprenticeship Program = https://hudsonthames.org/apprenticeship-program/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
keywords =
    portfolio optimization
    finance
    investment
    education

[options]
include_package_data = True
packages = find:
python_requires =
    >=3.7
setup_requires =
    setuptools
install_requires =
    cvxpy==1.1.1
    numpy==1.18.5
    matplotlib==3.2.1
    pandas==1.0.4
    scikit-learn==0.23.1
    scipy==1.4.1

[options.packages.find]
package_dir =
    portfoliolab
exclude =
    contrib
    docs
